Avoid scrollbars on Chrome
Chrome seems to ignore hiding scrollbars and the #app div was set to the width needed to show the map part in order to make the layout correct, whether the map were shown or not. With these changes a mapless class is added to #app which limits the width to 448px.

--- a/style.css
+++ b/style.css
@@ -8,6 +8,7 @@ body { margin: 0px; background-color: black; }
 .cell { position: relative; float: left; }
 
 #app { width: 1340px; height: 448px; }
+#app.mapless { width: 448px; }
 
 #tracker .item,
 #tracker .boss,
